--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ section {
 }
 
 .btn-secondary:hover {
+    background-color: #01C786;
     transform: scale(1.05);
 }
 
@@ -151,10 +152,10 @@ hr.svg-divider {
     padding: 18px 120px;
     border-radius: 1000px;
     font-size: 18px;
+    font-weight: 500;
     cursor: pointer;
     transition: background-color 0.3s;
     font-family: 'Bricolage Grotesque', system-ui, -apple-system, sans-serif;
-    font-weight: 500;
 }
 
 .cta-button:hover {
@@ -162,6 +163,61 @@ hr.svg-divider {
     background-color:#F56237;
     z-index: 100;
 }
+
+/* Button animation  */
+.button {
+    pointer-events: auto;
+    cursor: pointer;
+    background: #e7e7e7;
+    border: none;
+    padding: 1.5rem 3rem;
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    position: relative;
+    display: inline-block;
+}
+
+.button::before,
+.button::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.button--mimas {    
+	padding: 18px 80px;
+	font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+	border-radius: 1000rem;
+	overflow: hidden;
+	color: #fff;
+	background: #F45D22;
+}
+
+.button--mimas span {
+	position: relative;
+	mix-blend-mode: normal;
+}
+
+.button--mimas::before {
+	content: '';
+	background: var(--primary-color);
+    font-family: 'Bricolage Grotesque', system-ui, -apple-system, sans-serif;
+	width: 120%;
+	left: -10%;
+	transform: skew(30deg);
+	transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+
+.button--mimas:hover::before {
+	transform: translate3d(100%,0,0);
+}
+
+/* Button animation end */
 
 .cards img {
     max-width: 100%;
@@ -501,10 +557,11 @@ hr.svg-divider {
 .benefits-detail {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: 0 auto; /* Center the div horizontally */
     max-width: 1200px;
     padding-bottom: 32px;
+    padding: 0 100px;
 }
 
 .benefit {
@@ -536,6 +593,7 @@ hr.svg-divider {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-left: 20px;
         max-width: 1200px;
         }
     
@@ -642,7 +700,7 @@ hr.svg-divider {
 
 .author h3 {
     margin: 0;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
 }
 
@@ -927,8 +985,8 @@ footer {
 
     .why-images {
         display: flex;
-        gap: 32px;
-        padding-top: 40px;
+        gap: 24px;
+        padding-top: 10px;
     }
 
     .image-column {
@@ -950,8 +1008,10 @@ footer {
     }
     
     .why-images {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
+        gap: 16px;
+
     }
     
     .why-header h2 {
@@ -1059,7 +1119,7 @@ footer {
 
 .quote-text {
     font-size: 22px;
-    line-height: 1.4;
+    line-height: 1.5;
     font-weight: 350;
     color: #594696;
     margin: 0;
@@ -1184,39 +1244,27 @@ footer {
     margin-top: 32px;
 }
 
-.content-card {
+
+.card-image-2 {
+    position: relative;
+    width: 100%;
+    height: 315px;
+    width: 324px;
+    overflow: hidden;
+}
+
+.content-card-2 {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    align-items: center;
+    gap: 0px;
 }
 
-.card-image {
-    position: relative;
-    width: 100%;
-    height: 480px;
-    border-radius: 36px;
-    overflow: hidden;
-    background: #FFFFFF;
-    box-shadow: 0 5px 100px rgba(0, 0, 0, 0.1);
-}
-
-.card-image img {
+.card-image-2 img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-}
-
-.optional-badge {
-    position: absolute;
-    right: 40px;
-    bottom: 40px;
-    background: #2F2219;
-    color: #FFFFFF;
-    padding: 6px 24px;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: 500;
+    object-fit: contain;
 }
 
 .card-content {
@@ -1230,7 +1278,7 @@ footer {
     font-weight: 600;
     line-height: 32px; /* 114.286% */
     color: #2F2219;
-    margin-bottom: 16px;
+    margin-bottom: -10px;
 }
 
 .card-content p {
@@ -1395,19 +1443,24 @@ footer {
 }
 
 .card-text h3 {
-    font-size: 20px;
+    font-size: 22px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 28px; /* 140% */
     color: #2F2222;
     margin-bottom: 4px;
 }
 
+.card-text h3 span {
+    font-weight: 700;
+    line-height: 28px; /* 140% */
+}
+
 .card-text p {
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 22px; /* 121.429% */
+    line-height: 140%;
     color: #5B514B;
 }
 
@@ -1441,7 +1494,7 @@ footer {
 }
 
 .btn-primary:hover {
-    background-color: #ff5a2a;
+    background-color: #F45D22;
 }
 @media (max-width: 1200px) {
     .pricing-container {
@@ -1470,7 +1523,12 @@ footer {
         padding: 24px;
         gap: 16px;
     }
-
+    .card-text h3 {
+        text-align: center;
+    }
+    .card-text p {
+        text-align: center;
+    }
     .card-info {
         width: 100%;
         flex-direction: column;
@@ -1481,6 +1539,10 @@ footer {
     }
 
     .btn-primary {
+        width: 100%;
+        justify-content: center;
+    }
+    .btn-secondary {
         width: 100%;
         justify-content: center;
     }
@@ -1527,6 +1589,10 @@ footer {
     }
 
     .btn-primary {
+        width: 100%;
+        justify-content: center;
+    }
+    .btn-secondary {
         width: 100%;
         justify-content: center;
     }
@@ -1591,10 +1657,9 @@ footer {
 .faq-question span {
     color: #2F221B;
     font-family: "Bricolage Grotesque";
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 500;
-    line-height: 20px; /* 125% */
+    font-weight: 400;
     flex-grow: 1;
     margin-right: 16px;
 }
@@ -1624,6 +1689,7 @@ footer {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-out;
+    
 }
 
 .faq-answer hr {
@@ -1636,12 +1702,29 @@ footer {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px;
-    padding: 0 24px 12px 24px;
+    line-height: 140%;
+    padding-left: 24px;
+    padding-right: 24px
+}
+
+.faq-answer h4 {
+    color: #5B514B;
+    font-style: normal;
+    font-weight: 400;
+    padding-left: 24px;
+}
+
+.faq-answer li {
+    color: #5B514B;
+    font-style: normal;
+    font-weight: 400;
+    padding-bottom: 12px;
+    width: 80%;
+    line-height: 140%;
 }
 
 .faq-item.active .faq-answer {
-    max-height: 500px; /* Adjust this value based on your content */
+    max-height: 1600px; /* Adjust this value based on your content */
 }
 
 .faq-item.active .circle-button {
@@ -1668,3 +1751,4 @@ footer {
         line-height: 26px;
     }
 }
+
