--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     --background-color: rgb(252, 243, 238);
     --card-background: rgb(243, 234, 237);
     --purple-accent: rgb(158, 134, 255);
+    --white: rgb(255, 255, 255);
+    --outline: rgb(232, 220, 213);
 }
 
 body {
@@ -30,49 +32,6 @@ section {
     max-width: 1440px;
     margin: 0 auto;
 }
-
-/* Button styles */
-.btn-primary {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    padding: 18px 32px;
-    background: var(--primary-color);
-    border: none;
-    border-radius: 1000px;
-    color: #FFFFFF;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.btn-primary:hover {
-    transform: scale(1.05);
-}
-
-.btn-secondary {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    padding: 18px 32px;
-    background-color: #11D796;
-    border: none;
-    border-radius: 1000px;
-    color: #FFFFFF;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.btn-secondary:hover {
-    background-color: #01C786;
-    transform: scale(1.05);
-}
-
 /* Common card styles */
 .card {
     background: #FFFFFF;
@@ -159,11 +118,16 @@ hr.svg-divider {
 
 /* Button animation  */
 .button {
+    display: flex;
+    min-width: 220px;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
     pointer-events: auto;
     cursor: pointer;
-    background: #e7e7e7;
+    color: #FFFFFF;
     border: none;
-    padding: 18px 120px;
+    padding: 18px 32px;
     font-family: inherit;
     font-size: inherit;
     position: relative;
@@ -206,6 +170,35 @@ hr.svg-divider {
 }
 
 .button--mimas:hover::before {
+	transform: translate3d(100%,0,0);
+}
+
+.button--nomas {    
+	font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+	border-radius: 1000rem;
+	overflow: hidden;
+	color: #fff;
+	background: #01C786;
+}
+
+.button--nomas span {
+	position: relative;
+	mix-blend-mode: normal;
+}
+
+.button--nomas::before {
+	content: '';
+	background: #11D796;
+    font-family: 'Bricolage Grotesque', system-ui, -apple-system, sans-serif;
+	width: 120%;
+	left: -10%;
+	transform: skew(30deg);
+	transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+
+.button--nomas:hover::before {
 	transform: translate3d(100%,0,0);
 }
 
@@ -436,6 +429,9 @@ hr.svg-divider {
     border-radius: 43px;
     z-index: 1000;
   }
+  .logo-float:hover img {
+    filter: brightness(0.8); /* Darken the image */
+}
 
 /* Responsive Styles */
 @media (max-width: 1200px) {
@@ -885,17 +881,50 @@ footer {
 }
 
 .footer-text {
-    font-size: 22px;
-    margin-bottom: 24px;
+    margin: -15px auto;
+    font-size: 24px;
+    margin-bottom: 8px;
     font-weight: 400;
     font-family: Kalam;
     line-height: 1.2;
     letter-spacing: -0.04em;
 }
 
+.footer-credits {
+    display: inline-block;
+    width: 100%;
+    font-size: 18px;
+    color: var(--secondary-text);
+    font-weight: 300;
+    line-height: 1.3;
+    padding-bottom: 24px;
+    margin: auto;
+    text-align: center;
+    top: -82px;
+    position: relative;
+}
+
+.message {
+    font-size: 14px;
+    padding-top: 4px;
+    background-color: var(--background-color);
+}
+
+.text-cover {
+    background-color: var(--background-color);
+    padding: 0 8px;
+}
+
+.thin-line {
+    border: none; /* Remove the default border */
+    height: 1px; /* Set the height of the line */
+    background-color:var(--outline); /* Set the color of the line */
+    margin: 40px 0; /* Add margin for spacing */
+}
+
 .cities {
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.8;
     color: var(--secondary-text);
     font-weight: 400;
 }
@@ -1390,8 +1419,24 @@ footer {
     font-style: normal;
     font-weight: 600;
     line-height: 32px; /* 114.286% */
-    color: #2F2219;
+    color: var(--text-color);
     margin-bottom: -10px;
+}
+
+.card-content h3 span {
+    font-weight: 500;
+    font-size: 14px;
+    background-color: var(--text-color);
+    border-radius: 50px;
+    display: inline-block;
+    padding: 2px 2px;
+    color: var(--background-color);
+    line-height: 22px;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: -3px;
 }
 
 .card-content p {
@@ -1573,8 +1618,8 @@ footer {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 140%;
-    color: #5B514B;
+    line-height: 150%;
+    color: var(--secondary-text);
 }
 
 .price {
@@ -1612,6 +1657,15 @@ footer {
 @media (max-width: 1200px) {
     .pricing-container {
         padding: 0 0;
+    }
+    .pricing-card {
+        flex-direction: column;
+        padding-bottom: 32px;
+    }
+
+    .guide-card {
+        flex-direction: column;
+        padding-bottom: 32px;
     }
 }
 
@@ -1953,7 +2007,7 @@ footer {
 .contact {
     text-align: center;
     margin: auto;
-    width: 100%;
+    max-width: 1110px;
   }
   
   .contact h2 {
@@ -1974,8 +2028,8 @@ footer {
   }
   
   .contact-box {
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color:var(--white);
+    border: 1px solid var(--outline);
     border-radius: 8px;
     padding: 20px;
     width: 200px;
@@ -1996,7 +2050,7 @@ footer {
   }
   
   .contact-box a {
-    color: #000;
+    color:var(--text-color);
     text-decoration: none;
     font-size: 16px;
   }
