--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ hr.svg-divider {
     border: none;
     background-image: url("img/hr.svg"); /* Path to your SVG file */
     background-repeat: no-repeat;
-    background-size: 100vw 2px; /* Stretch to full width, maintain aspect ratio */
+    background-size: 200vw 2px; /* Stretch to full width, maintain aspect ratio */
     background-position: center;
     height: 5px; /* Adjust height according to your SVG height */
     
@@ -73,7 +73,7 @@ hr.svg-divider {
 
 /* Hero Section */
 .hero {
-    padding: 50px 0;
+    padding: 0 0;
     text-align: center;
 }
 
@@ -95,7 +95,7 @@ hr.svg-divider {
 .hero-text {
     max-width: 1070px;
     margin: 0 auto;
-    padding: 0 10px;
+    margin-top: 100px;
     line-height: 1.5;
 }
 
@@ -113,7 +113,6 @@ hr.svg-divider {
     color: var(--text-color);
     font-weight: 400;
 }
-
 
 /* Button animation  */
 .button {
@@ -241,6 +240,11 @@ hr.svg-divider {
         padding: 0 0;
         text-align: center;
     }
+    .hero-text {
+        max-width: 1070px;
+        margin: 0 auto;
+    }
+
     .hero-text h1 {
         font-size: 36px;
         line-height: 105%;
@@ -250,12 +254,15 @@ hr.svg-divider {
         font-weight: 800;
     }
     .hero-text p {
+        width: 90%;
+        margin: 0 auto;
         font-size: 18px;
         line-height: 26px;
-        margin: 16px 0 8px 0;
+
     }
     .scroller {
         display: none;
+        margin-top: 500px;
     }
     .cards {
         display: flex; /* Use flexbox for easy centering */
@@ -525,6 +532,10 @@ hr.svg-divider {
         }
 }
 @media (max-width: 430px) {
+    .intro {
+        width: 100%;
+    }
+ 
     .intro-placeholder {
         position: absolute;
         width: 100%;
@@ -549,35 +560,48 @@ hr.svg-divider {
         height: auto; /* Adjust height as needed */
         object-fit: cover; /* Ensure the image covers the area */
         object-position: top; /* Adjust as needed */
-        border-radius: 0 0 24px 24px;
+        border-radius: 0 0 16px 16px;
     }
     .intro-title {
-        margin-right: 20px;
         padding-top: 16px;
-        padding-left: 16px;
-        font-size: 36px;
-        line-height: 40px;
-        margin-top: 0;
-        margin-bottom: 8px;
+        margin-right: 12px;
+        margin-bottom: -10px;
+        padding-left: 12px;
+        font-size: 32px;
+        line-height: 36px;
         letter-spacing: -1.04px;
         font-weight: 800;
         hyphens: manual;
         display: block;
-        border-radius: 16px;
+        border-radius: 12px;
         background-color: var(--background-color);
     }
 
     .intro-description {
-        display: inline;
-        font-size: 18px;
+        width: 94%;
+        padding-left: 12px;
         line-height: 26px;
         box-decoration-break: clone; /* Ensure the background follows each line */
         -webkit-box-decoration-break: clone; /* Webkit support */
         }
+    .inline {
+        display: block;
+        font-size: 18px;
+        line-height: 1.5;
+        color: var(--secondary-text);
+        background-color: #FCF3EE;
+        border-radius: 20px;
+        box-decoration-break: clone; /* Ensure the background follows each line */
+        -webkit-box-decoration-break: clone; /* Webkit support */
+        padding: 0 4px 4px 0;
+        margin-top: 0;
+        position: relative;
+        }
+
     .button {
         margin-top: 20px;
         padding: 16px 48px 16px 48px;
-        width: 100%;
+        width: 94%;
         }
 
     .logo-float {
@@ -616,7 +640,8 @@ hr.svg-divider {
     margin: 0 auto; /* Center the div horizontally */
     max-width: 1200px;
     padding: 0 100px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .benefit {
@@ -813,8 +838,9 @@ hr.svg-divider {
         min-width: 0;
     }
     .testimonial-text {
-        font-size: 18px;
-        line-height: 1.5;
+        width: 104%;
+        font-size: 16px;
+        line-height: 1.4;
         margin-bottom: 16px;
     }
     .quote-mark {
@@ -871,7 +897,7 @@ footer {
 }
 
 .footer-text {
-    margin: -15px auto;
+    margin: -5px auto;
     font-size: 24px;
     font-weight: 400;
     font-family: Kalam;
@@ -1924,6 +1950,17 @@ footer {
         width: 90%;
         margin: auto;
     }
+    .faq-answer p {
+        font-size: 16px;
+        line-height: 22px;
+        width: 86%;
+        margin-bottom: 20px;
+    }
+    .faq-answer li {
+        font-style: normal;
+        padding-bottom: 12px;
+        width: 92%;
+    }
 }
 /* Index animation scroller */
 
@@ -1936,8 +1973,8 @@ footer {
 
 .svg-container {
     position: absolute;
-    bottom: -5%; /* Overlap 50% into the next section */
-    left: 45%; /* Center horizontally */
+    bottom: 58%; /* Overlap 50% into the next section */
+    left: 46%; /* Center horizontally */
     transform: translateX(-50%); /* Adjust for exact centering */
     z-index: 10; /* Ensure it's above other content */
     width: 150px; /* Adjust based on your SVG size */
@@ -1945,8 +1982,8 @@ footer {
 }
 
 .arrow-svg {
-    width: 150%; /* Ensure the SVG fills its container */
-    height: 150%; /* Ensure the SVG fills its container */
+    width: 160%; /* Ensure the SVG fills its container */
+    height: 160%; /* Ensure the SVG fills its container */
 }
 
 .scroller::before,
@@ -2092,11 +2129,25 @@ footer {
     }
 
     .hp {
-        margin-top: -50px;
+        margin-top: 0px;
     }
 
     @media (max-width: 430px) {
         .hp {
             margin-top: 15px;
+        }
+        .svg-container {
+            position: absolute;
+            bottom: 56%; /* Overlap 50% into the next section */
+            left: 60%; /* Center horizontally */
+            transform: translateX(-50%); /* Adjust for exact centering */
+            z-index: 10; /* Ensure it's above other content */
+            width: 150px; /* Adjust based on your SVG size */
+            height: 150px; /* Adjust based on your SVG size */
+        }
+        
+        .arrow-svg {
+            width: 80%; /* Ensure the SVG fills its container */
+            height: 80%; /* Ensure the SVG fills its container */
         }
         }
