Uprava CSS – zobrazeni obrazku, chybejici lomitko?

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ section {
 /* Common horizontal rule style */
 hr.svg-divider {
     border: none;
-    background-image: url("img/hr.svg"); /* Path to your SVG file */
+    background-image: url("/img/hr.svg"); /* Path to your SVG file */
     background-repeat: no-repeat;
     background-size: 200vw 2px; /* Stretch to full width, maintain aspect ratio */
     background-position: center;
@@ -953,7 +953,7 @@ footer {
   
 .cities a:hover {
     color: #5947A3;
-    background-image: url("img/wave.svg");
+    background-image: url("/img/wave.svg");
     background-repeat: repeat;
     background-position-x: 0%;
     background-position-y: 0%;
@@ -1880,7 +1880,7 @@ footer {
     width: 15px;
     height: 15px;
     display: inline-block;
-    background-image: url("img/plus.svg");
+    background-image: url("/img/plus.svg");
 }
 
 .faq-answer {
